Improve contrast in dark mode (fix #7)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
+.titlebar-button-container.mod-left {
+    opacity: 1;
+}
+
 #quick-explorer {
     display: inline-block;
     padding-left: 10px;
@@ -22,10 +26,11 @@
     }
 }
 
-.qe-popup-menu .menu-item {
+.qe-popup-menu .menu-item:not(.is-disabled):not(.is-label) {
     display: flex;
     &.selected {
         background-color: var(--background-secondary-alt);
+        body.theme-dark & { background-color: var(--interactive-accent-hover); }
     }
     &:hover:not(.selected) {
         background-color: var(--background-primary);
@@ -43,6 +48,10 @@
 
     &:hover, &.selected {
         color: var(--text-normal);
+        body.theme-dark & { color: var(--text-on-accent); }
+        .menu-item-icon {
+            body.theme-dark & { color: var(--text-on-accent); }
+        }
         .nav-file-tag {
             opacity: 1;     // make it more visible for the current item
         }
